fix off centered button

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -20,7 +20,7 @@ body {
   display: inline;
 }
 #cities{
-  left:44%;
+  left:50%;
 }
 article,
 aside,
